--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:dll": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.ts",
     "build:main": "cross-env NODE_ENV=production TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.main.prod.ts",
     "build:renderer": "cross-env NODE_ENV=production TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.renderer.prod.ts",
-    "build:backend": "cd src/backend/python-env/Scripts/ && activate && cd ../../ && pyinstaller --add-binary python-env/Lib/site-packages/spire/doc/lib/Spire.Doc.Base.dll:./spire/doc/lib --add-binary python-env/Lib/site-packages/spire/doc/lib/libSkiaSharp.dll:./spire/doc/lib --onefile api.py",
+    "build:backend": "cd src/backend && node build-backend.js",
     "postinstall": "ts-node .erb/scripts/check-native-dep.js && electron-builder install-app-deps && npm run build:dll",
     "lint": "cross-env NODE_ENV=development eslint . --ext .js,.jsx,.ts,.tsx",
     "package": "ts-node ./.erb/scripts/clean.js dist && npm run build && electron-builder build --publish never && npm run build:dll",
