--- a/package.json
+++ b/package.json
@@ -222,7 +222,7 @@
       "repo": "electron-react-boilerplate"
     }
   },
-  "devEngines": {
+  "engines": {
     "node": ">=14.x",
     "npm": ">=7.x"
   },
