--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,12 +19,24 @@
       "port": 9223,
       "webRoot": "${workspaceFolder}",
       "timeout": 150000
+    },
+    {
+      "name": "Python: Backend API",
+      "type": "python",
+      "request": "launch",
+      "program": "${workspaceFolder}/src/backend/api.py",
+      "console": "integratedTerminal",
+      "justMyCode": true
     }
   ],
   "compounds": [
     {
       "name": "Electron: All",
-      "configurations": ["Electron: Main", "Electron: Renderer"]
+      "configurations": [
+        "Electron: Main",
+        "Electron: Renderer",
+        "Python: Backend API"
+      ]
     }
   ]
 }
